--- a/assets/index.html
+++ b/assets/index.html
@@ -14,8 +14,8 @@
             <header>
                 <h1>Create frontend framework</h1>
             </header>
-            <input phone-number type="text" placeholder="numéro de mobile" id="mobile-number">
-            <input phone-number type="text" placeholder="numéro de fixe" id="fix-number">
+            <input phone-number border-color="green" type="text" placeholder="numéro de mobile" id="mobile-number">
+            <input phone-number with-space="false" border-color="yellow" type="text" placeholder="numéro de fixe" id="fix-number">
             <input credit-number type="text" placeholder="numéro de carte crédit" id="fax-number">
         </article>
     </div>
